tests/ui/link-native-libs/empty-kind-2.rs
// Unspecified kind should fail with an error

//@ compile-flags: -l :+bundle=mylib

fn main() {}

//~? ERROR unknown library kind ``
